--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!-- Jonathan Emanuel Mendoza Olvera-->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -10,6 +11,8 @@
     <h1>Lista de palabras</h1>
     <ul>
         <!-- imprime los elementos de la lista  -->
+
     </ul>
+    <script src="./app.js"></script>
 </body>
 </html>
